# simple-stock-program

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/data/: sample_data.py
src/models/: stock.py  trade.py
src/services/: stock_service.py  trade_service.py
src/utils/: logger.py  trade_indicator.py
tests/: conftest.py  test_stock_service.py  test_trade_service.py
