[project]
name = "simple-stock-program"
version = "0.1.0"
description = "A simple stock market program"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130

[tool.isort]
line_length=130
order_by_type=false
profile = "black"
reverse_relative=true
